# DrinkMotionAndroid

./: .gitignore~
app/: build.gradle
app/src/androidTest/java/com/example/user/svmtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/user/svmtest/: MainActivity.java  MotionDetect.java  testtry.java
app/src/main/jni/: CMakeLists.txt  com_example_user_svmtest_MotionDetect.cpp  com_example_user_svmtest_MotionDetect.h  com_example_user_svmtest_test.cpp  com_example_user_svmtest_test.h  myfunc.cpp  myfunc.h  svm.cpp
app/src/main/jniLibs/armeabi-v7a/: libgsl.la  libgslcblas.la
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/user/svmtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
